--- a/electron-plugin-poc/index.html
+++ b/electron-plugin-poc/index.html
@@ -8,6 +8,7 @@
   <body>
     <h1>💖 Hello World!</h1>
     <p>Welcome to your Electron application.</p>
-    <script type="module" src="/src/renderer.ts"></script>
+    <p id="info"></p>
+    <script type="module" src="/src/renderer/index.ts"></script>
   </body>
 </html>
