--- a/electron-plugin-poc/index.html
+++ b/electron-plugin-poc/index.html
@@ -5,10 +5,10 @@
     <title>Electron Plugin PoC</title>
 
   </head>
-  <body>
+  <body id="root" style="background-color: #0f0f0f; color: rgb(222, 222, 222)">
     <h1>💖 Hello World!</h1>
     <p>Welcome to your Electron application.</p>
     <p id="info"></p>
-    <script type="module" src="/src/renderer/index.ts"></script>
+    <script type="module" src="/src/renderer/index.tsx"></script>
   </body>
 </html>
