--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Electron Plugin PoC</title>
 
   </head>
-  <body>
+  <body class=" bg-zinc-900 text-zinc-200">
     <h1>💖 Hello World!</h1>
     <p>Welcome to your Electron application.</p>
     <p id="info"></p>
