--- a/index.html
+++ b/index.html
@@ -5,10 +5,8 @@
     <title>Electron Plugin PoC</title>
 
   </head>
-  <body class=" bg-zinc-900 text-zinc-200">
-    <h1>💖 Hello World!</h1>
-    <p>Welcome to your Electron application.</p>
-    <p id="info"></p>
-    <script type="module" src="/src/renderer/index.ts"></script>
+  <body class="!bg-zinc-900 text-zinc-200" style="background-color: black;" id="root">
+  
+    <script type="module" src="/src/renderer/index.tsx"></script>
   </body>
 </html>
